--- a/pages/station.html
+++ b/pages/station.html
@@ -3,6 +3,7 @@
    <div class="hero">
             <div class="main">
                 <form method="get" action="{% url 'station-results' %}">
+                    {% csrf_token %}
                     <input type="text" class="search-text" name="station" placeholder="Enter City Name e.g. Delhi" required />
                     <br />
                     <button type="submit" class="s-btn">Search</button>
