--- a/pages/search-result.html
+++ b/pages/search-result.html
@@ -29,4 +29,7 @@
 <br />
 <h1>No Train Found - Search Again</h1>
 {% endif %}
+{% if error_message %}
+    <div class="error">{{ error_message }}</div>
+{% endif %}
 {% endblock %}
